[package]
name = 'game2'
description = 'My LD49 game entry'
license = 'MIT'
version = '0.1.0'
authors = ['Anton Bulakh <self@necauqua.dev>']
edition = '2018'

[profile.release]
lto = true

[lib]
crate-type = ['cdylib']

[dependencies]

ld-game-engine = { path = '../ld-game-engine' }

nalgebra = { version = '0.29', features = ['serde-serialize'] }
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'

log = '0.4'
wasm-logger = '0.2'

wasm-bindgen = { version = '0.2', features = ['serde-serialize'] }
wasm-bindgen-futures = '0.4'

js-sys = '0.3'

[dependencies.web-sys]
version = '=0.3.35' # exactly .35 because here IDE still works (drastically speeding up my development)
features = [
    'console',
    'Document',
    'Window',
    'History',
    'Element',
    'Node',
    'Response',
    'Storage',
    'Event',
    'MouseEvent',
    'TouchEvent',
    'TouchList',
    'Touch',
    'WheelEvent',
    'KeyboardEvent',
    'EventTarget',
    'HtmlElement',
    'AudioContext',
    'AudioBuffer',
    'AudioNode',
    'GainNode',
    'AudioParam',
    'AudioDestinationNode',
    'AudioBufferSourceNode',
    'HtmlImageElement',
    'HtmlAudioElement',
    'HtmlMediaElement',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
    'TextMetrics',
    'CssStyleDeclaration',
    'Performance'
]
